# timezonefinder

./: .coveragerc  .cursorrules  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  Agents.md  CHANGELOG.rst  CHANGES_SUMMARY.md  COMPRESSION_IMPLEMENTATION.md  CONTRIBUTING.md  CONTRIBUTING.rst  IMPLEMENTATION_COMPLETE.md  INDEX.md  MANIFEST.in  Makefile  README.md  README.rst  WORK_SUMMARY.txt  ai_solution.py  badges.rst  build.py  build_c_extension.py  build_n_install.py  cmult.c  cmult.h  current_data_statistics.txt  example.py  parse_data.sh  publish.py  pyproject.toml  readthedocs.yml  requirements.in  requirements.txt  requirements_numba.in  requirements_numba.txt  requirements_tests.in  requirements_tests.txt  runtests.py  setup.cfg  (+8 more)
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: actions-updater.yaml  build.yml  check_data_updates.yml  release_data_update.yml
.travis/: install.sh  run.sh
docs/: 0_getting_started.rst  1_usage.rst  2_use_cases.rst  3_about.rst  4_api.rst  5_contributing.rst  7_performance.rst  Makefile  SOLUTIONS_reduce_release_memory_foo.md  alternatives.rst  badges.rst  benchmark_results_initialization.rst  benchmark_results_polygon.rst  benchmark_results_timezonefinding.rst  conf.py  data_format.rst  data_report.rst  index.rst  requirements_docs.txt
examples/: aware_datetime.py  batch_processing.py  get_geometry.py  get_offset.py  global_functions_demo.py  introduction.py  parallel_multiprocessing.py  parallel_threading.py  resource_management.py
prototypes/: README.md  analyze_closest_matches.py  analyze_multi_boundary_holes.py  analyze_unmatched_holes.py  comprehensive_hole_analysis_final.md  detailed_bbox_analysis.py  distance_conversion_analysis.py  hole_boundary_analysis_findings.md  hole_boundary_analysis_results.json  last_zone_change_bench.py  multi_boundary_hole_analysis.json  shortcut_split_bfs_bench.py  shortcut_split_bfs_bench2.py  single_resolution_bench.py  unmatched_holes_closest_matches.json  verify_hole_boundary_hypothesis.py  visualize_resolution_metrics.py  zone_precedence_analysis.json  zone_precedence_analysis.py  zone_precedence_config.json  zone_precedence_implementation.py  zone_precedence_integration_guide.md
scripts/: benchmark_utils.py  check_speed_initialisation.py  check_speed_inside_polygon.py  check_speed_timezone_finding.py  check_upgradeable.sh  classes.py  configs.py  file_converter.py  flatbuffers_utils.py  geojson_schema.py  handler.py  helper_classes.py  hex_utils.py  numba_utils.py  polygon_fb.py  profile_shortcuts_subset.py  read_package_version.py  reporting.py  shortcuts.py  test_helpers.py  timezone_data.py  utils.py  utils_numba.py
test/: authors_tests.py  auxiliaries.py  helpers_test.py  locations.py  memory_usage_test_timezonefinder.py  memory_usage_test_tzwhere.py  test_functional.py  test_helpers.py  test_it.py  test_shortcuts.py  test_utils.py
tests/: auxiliaries.py  cli_test.py  conftest.py  global_functions_test.py  locations.py  main_test.py  shortcut_test.py  test_compatibility.py  test_data_version.py  test_distributions.py  test_example_scripts.py  test_examples.py  test_flatbuf_io.py  test_flatbuf_polygon_utils.py  test_flatbuf_shortcut_utils.py  test_flatbuf_unique_shortcut_utils.py  test_input.geojson  test_input.json  test_integration.py  test_optimized_hybrid_shortcuts.py  test_package_contents.py  test_package_contents_2.py  test_package_integrity.py  test_property_api.py  test_property_validation.py  test_resource_management.py  test_shortcut_utils.py  utils_test.py
timezonefinder/: __init__.py  _numba_replacements.py  build.py  command_line.py  configs.py  coord_accessors.py  file_converter.py  flatbuffers_utils.py  functional.py  global_functions.py  global_settings.py  helpers.py  helpers_numba.py  hex_helpers.py  hole_registry.json  kwargs_only.py  path_modification.py  polygon_array.py  timezone_names.json  timezone_names.pickle  timezone_names.py  timezonefinder.py  utils.py  utils_clang.py  utils_numba.py  zone_names.py
timezonefinder/data/: hole_registry.json  hybrid_shortcuts_uint16.fbs  shortcuts.fbs  shortcuts_unique_zone.fbs  timezone_names.txt  zone_ids.npy  zone_positions.npy
timezonefinder/data/boundaries/: xmax.npy  xmin.npy  ymax.npy  ymin.npy
timezonefinder/data/holes/: coordinates.fbs  xmax.npy  xmin.npy  ymax.npy  ymin.npy
timezonefinder/flatbuf/: Polygon.py  PolygonCollection.py  ShortcutCollection.py  ShortcutEntry.py  UniqueShortcutCollection.py  UniqueShortcutEntry.py  ZoneIdWidth.py  polygon.fbs  polygon_schema.fbs  polygon_utils.py  shortcut_schema.fbs  shortcut_utils.py  shortcuts_unique_zone.fbs  unique_shortcut_utils.py  utils.py
timezonefinder/flatbuf/io/: __init__.py  compression.py  hybrid_shortcuts.py  polygons.py  shortcuts.py  unique_shortcuts.py
timezonefinder/flatbuf/schemas/: __init__.py  shortcuts.fbs  unique_shortcuts.fbs
