[project]
name = "timezonefinder"
version = "8.0.0"
description = "python package for finding the timezone of any point on earth (coordinates) offline"
authors = [{name = "jannikmi", email = "github@michelfe.it"}]
# Replace with license="MIT" with setuptools>=71
license = {file="LICENSE"}
readme = "README.rst"
keywords = ["timezone", "coordinates", "latitude", "longitude", "location", "offline", "polygon"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Localization",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9,<4"
dependencies = [
    # https://numpy.org/neps/nep-0029-deprecation_policy.html
    "numpy<3,>=1.23; python_version >= '3.9'",
    "h3>4",
    "cffi<2,>=1.15.1",
    "flatbuffers>=25.2.10",
]

[project.urls]
homepage = "https://timezonefinder.michelfe.it/gui"
repository = "https://github.com/jannikmi/timezonefinder"
documentation = "https://timezonefinder.readthedocs.io/en/latest/"

[project.scripts]
timezonefinder = "timezonefinder.command_line:main"

[dependency-groups]
docs = [
    "Sphinx<6,>=5",
    "sphinx-rtd-theme<2,>=1",
]
test=[
    "tox",
    "pytest",
    # used in example scripts
    "pytz>=2022.7.1",
    # setuptoosl required for integration tests: building sdist and wheel
    "setuptools>=61",
    "cffi",
]
dev = [
    "tox",
    "pytest",
    "pre-commit",
    "mypy",
    "rstcheck",
    "isort",
    "ruff",
    "cibuildwheel",
]
numba = [
  "numba>=0.56,<1; python_version < '3.12'",
  "numba>=0.59,<1; python_version >= '3.12'",
]
pytz = [
    "pytz>=2022.7.1"
]

[build-system]
requires = ["setuptools>=61", "cffi"]
# Use setuptools build backend to build CFFI extensions via setup.py
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["timezonefinder", "timezonefinder.inside_poly_extension", "timezonefinder.flatbuf"]

[tool.setuptools.package-data]
timezonefinder = ["**/*.npy", "**/*.fbs", "**/*.txt", "**/*.json", "**/*.c", "**/*.h", ]

[tool.setuptools.data-files]
"." = ["DATA_LICENSE"]

[tool.ruff]
target-version = "py39"
src = ["timezonefinder", "tests", "build.py"]

[tool.ruff.lint.isort]
known-local-folder = ["timezonefinder"]

[tool.pytest.ini_options]
markers = [
    "unit: mark test as a unit test",
    "integration: mark test as an integration test"
]
