[bdist_wheel]
; does not run on Python 2 and 3
universal = 0

[flake8]
max_line_length = 120

[isort]
include_trailing_comma = True
known_first_party = timezonefinder
line_length = 120
multi_line_output = 5
not_skip = __init__.py

[metadata]
description-file = README.rst
license_file = LICENSE

[tool:multilint]
paths = timezonefinder
        setup.py
        test

[tool:pytest]
; TODO make it work
testpaths = test
addopts = --cov=timezonefinder
          --cov-report term-missing
