[metadata]
version = file: VERSION
license_file = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst

[bdist_wheel]
; does not run on Python 2 and 3
universal = 0

[flake8]
max_line_length = 120

[isort]
;https://github.com/timothycrosley/isort/wiki/isort-Settings
include_trailing_comma = True
known_first_party = timezonefinder
known_third_party = numpy
line_length = 120
multi_line_output = 5
balanced_wrapping = True
use_parentheses = True

[tool:multilint]
paths = timezonefinder
        setup.py
        test

[tool:pytest]
testpaths = test
addopts = --cov=timezonefinder
          --cov-report term-missing

[coverage:run]
branch = True
include = */timezonefinder/*

[coverage:paths]
source =
    timezonefinder
    .tox/*/site-packages

[coverage:report]
show_missing = True

